Refactored DailyStatisticPage, looks ugly but it's working

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,6 +1,6 @@
 application.controller.void-request-param="Не указаны или неверно заданы параметры запроса"
 application.controller.wrong-period="Указан неверный период запроса"
 
-application.service.statistic-service.opening-balance="Сальдо на початок розрахункової доби"
-application.service.statistic-service.closing-balance="Сальдо на кінесь розрахункової доби"
-application.service.statistic-service.expenses="Сума проведених платежів"
+application.service.statistic-service.opening-balance=Сальдо на початок розрахункової доби
+application.service.statistic-service.closing-balance=Сальдо на кінесь розрахункової доби
+application.service.statistic-service.expenses=Сума проведених платежів
