Deploy script is done

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,7 @@
 application.controller.void-request-param="Неверно заданы параметры запроса"
 application.controller.wrong-period="Указан неверный период"
 
+application.service.statistic-service.opening-balance=Сальдо на початок розрахункової доби
+application.service.statistic-service.closing-balance=Сальдо на кінесь розрахункової доби
+application.service.statistic-service.expenses=Сума проведених платежів
+
