add redirect to details page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,6 @@
-application.controller.void-request-param="Неверно заданы параметры запроса"
-application.controller.wrong-period="Указан неверный период"
+application.controller.void-request-param="РќРµ СѓРєР°Р·Р°РЅС‹ РёР»Рё РЅРµРІРµСЂРЅРѕ Р·Р°РґР°РЅС‹ РїР°СЂР°РјРµС‚СЂС‹ Р·Р°РїСЂРѕСЃР°"
+application.controller.wrong-period="РЈРєР°Р·Р°РЅ РЅРµРІРµСЂРЅС‹Р№ РїРµСЂРёРѕРґ Р·Р°РїСЂРѕСЃР°"
 
-application.service.statistic-service.opening-balance=Сальдо на початок розрахункової доби
-application.service.statistic-service.closing-balance=Сальдо на кінесь розрахункової доби
-application.service.statistic-service.expenses=Сума проведених платежів
-
+application.service.statistic-service.opening-balance=РЎР°Р»СЊРґРѕ РЅР° РЅР°С‡Р°Р»Рѕ РїРµСЂРёРѕРґР°
+application.service.statistic-service.closing-balance=РЎР°Р»СЊРґРѕ РЅР° РєРѕРЅРµС† РїРµСЂРёРѕРґР°
+application.service.statistic-service.expenses=РЎСѓРјРјР° РїР»Р°С‚РµР¶РµР№
